Fixed a bug in syncup of multiple devices

--- a/src/assets/pages/index.html
+++ b/src/assets/pages/index.html
@@ -20,7 +20,7 @@
             background-attachment: fixed;
         }
     </style>
-    <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="/js/index.js"></script>
 </body>
 
