Button to join party

--- a/src/assets/pages/index.html
+++ b/src/assets/pages/index.html
@@ -3,7 +3,14 @@
     <script src="http://localhost:5000/socket.io/socket.io.js"></script>
     <audio controls id="audiosrc" src="">
     </audio>
+    <button id="joinRoom">Click here to join the party!!</button>
     <style>
+        #joinRoom {
+            display: block;
+            position: relative;
+            margin: auto;
+            top: 50%;
+        }
         #audiosrc {
             display: block;
             position: relative;
