--- a/src/assets/pages/index.html
+++ b/src/assets/pages/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-    <script src="http://localhost:5000/socket.io/socket.io.js"></script>
+    <script src="http://aa0daac89aba.ngrok.io/socket.io/socket.io.js"></script>
     <audio controls id="audiosrc" src="">
     </audio>
     <button id="joinRoom">Click here to join the party!!</button>
